--- a/.env
+++ b/.env
@@ -1,16 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=GennadySX
 APP_ENV=local
-APP_KEY=base64:V7JolilrIENfT/qYHuIJOcr37/+G4Nyii+1+mb+DaAk=
+APP_KEY=base64:qwq1eT/JCtFHg9MzTbThrzl7a4Ku4hbYa5kq7W0bigU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://www.expert.gennadysx.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=expert
-DB_USERNAME=root
+DB_DATABASE=cm69913_ladmin
+DB_USERNAME=cm69913_ladmin
+DB_PASSWORD=opopop
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -18,21 +19,16 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=gennadysx.com
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=smtp.timeweb.ru
+MAIL_PORT=995
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
